# eos_cpp

./: .clang-format  .gitignore  CMakeLibraryFiles.txt  CMakeLists.txt  README
cpp/EXT/ORDER/: F_OR_EX.CPP  ORDER.CPP  ORDER1.CPP  ORD_TYP.CPP  ORD_TYP.H
cpp/EXT/SPL/: SP_DAT.TXT  SP_FUN.CPP  SP_FUN2.CPP  SP_MAIN.CPP  SP_MAIN2.CPP  SP_READ.TXT  SP_READ1.TXT  sp_apr.cpp
cpp/F2C/MULTI_MIN/: BLAS.C  MAINC.C  MAINCB.C  MAINFC.C  MAINS.C  MAINSB.C  TN.C
cpp/F2C/REGRID/: BISPEV.C  CURFIT.C  FPBACK.C  FPBISP.C  FPBSPL.C  FPCHEC.C  FPCURF.C  FPDISC.C  FPGIVS.C  FPGRRE.C  FPKNOT.C  FPRATI.C  FPREGR.C  FPROTA.C  REGRID.C  SPLEV.C  gcvspl_genev.c
cpp/F2C/Spline/: BISPEV.C  CURFIT.C  F2C.H  FPBACK.C  FPBISP.C  FPBSPL.C  FPCHEC.C  FPCURF.C  FPDISC.C  FPGIVS.C  FPGRRE.C  FPKNOT.C  FPRATI.C  FPREGR.C  FPROTA.C  REGRID.C  SPLEV.C
cpp/F2C/add/: CFORTRAN.H  COLLEXT.F
cpp/F2C/libf2c/: abort_.c  backspac.c  c_abs.c  c_cos.c  c_div.c  c_exp.c  c_log.c  c_sin.c  c_sqrt.c  close.c  d_abs.c  d_acos.c  d_asin.c  d_atan.c  d_atn2.c  d_cnjg.c  d_cos.c  d_cosh.c  d_dim.c  d_exp.c  d_imag.c  d_int.c  d_lg10.c  d_log.c  d_mod.c  d_nint.c  d_prod.c  d_sign.c  d_sin.c  d_sinh.c  d_sqrt.c  d_tan.c  d_tanh.c  derf_.c  derfc_.c  dfe.c  dolio.c  due.c  ef1asc_.c  ef1cmc_.c  (+108 more)
cpp/F2C/math_func/: alg779_FermiDirac_int.c  alg779_test.c
cpp/F2C/noisespl/: gcvspl.c  gcvspl.f  gcvspl_genev.c
cpp/Gasd/Alg_Clc/: Clc_Gasd_Main.cpp  Clc_Gasd_Main.h  std_alg.cpp  std_alg.h
cpp/Gasd/Base/: Pnt_Defs.h
cpp/Gasd/Polygon/: oned.cpp  poly_test.cpp  region.h
cpp/Gasd/Test/: test_grid.cpp  test_ind.cpp
cpp/Gasd/Topology/: grid_action.cpp  grid_action.h  grid_array.cpp  grid_array.h  grid_bound.cpp  grid_bound.h  grid_center.cpp  grid_center.h  grid_interface.cpp  grid_interface.h  grid_manip.cpp  grid_manip.h  grid_mask.cpp  grid_mask.h  grid_mask_data.h  grid_mask_vector.h  grid_operator.h  grid_util.cpp  grid_util.h
cpp/MAT/: CMATRICS.CPP  CMATRICS.H  CurveAnalyzer.cpp  CurveAnalyzer.h  DAT_FAC.cpp  DAT_MANI.CPP  DAT_MANI.H  DAT_REG.H  DTVIEW.CFG  Dat_fac.h  EIGEN_MA.CPP  EIGEN_MA.H  MATRICS.CPP  MTFUNC.CPP  MTFUNC.H  MTMIN.CPP  MTMIN.H  MTQUAD.CPP  MTQUAD.H  MTRND.CPP  MTZERO.CPP  MYAPPR.CPP  MYAPPR.H  Matrics.h  Mtrnd.h  NAG.CPP  NAG.H  NdimMin.cpp  NdimMin.h  OneVarCurves.cpp  OneVarCurves.h  OpacityClc.cpp  OpacityClc.h  SPLINE.CPP  SPLINE.H  SPL_EX.CPP  SPL_EX.PRJ  SpecFunc.H  SpecFunc.cpp  Spl_fac.cpp  (+24 more)
cpp/MAT/KRUKOV/: ADI.F  CVET_1D.C  CVET_1D.CFG  CVET_1D.PRJ  C_1D.CPP  C_1D.PRJ
cpp/MAT/NAG/: ABZE04.C  ABZE04.f  BBZE04.f  E04ABE.C  E04ABE.f  E04BBE.f  MTMIN.CPP  MTMIN.H  X02AAE.f
cpp/MAT/spline/: func_cvt.cpp  func_cvt.h  spl_1d.cpp  spl_1d.h  spl_2d.cpp  spl_2d.h  spl_encode.cpp  spl_encode.h  spl_inc.cpp  spl_inc.h  spl_interface.h
cpp/URS/: ADI_DOU.CFG  ADI_DOU.CPP  ADI_DOU.H  ADI_DOU.PRJ  AUT_FAC.H  Aut_fac.cpp  CELL_DAT.CFG  CELL_DAT.CPP  CELL_DAT.PRJ  CELL_FAC.CPP  CELL_FAC.H  CELL_ITE.CPP  CELL_ITE.PRJ  CELL_K.CFG  CELL_KRU.CPP  CELL_KRU.PRJ  CELL_MY.CPP  COLD_D.CFG  COLD_D.CPP  COLD_D.prj  DTVIEW.CFG  EMPI_EQU.CPP  EMPI_EQU.H  FREE_FUN.CPP  FREE_FUN.H  FREE_FUN.PRJ  FRE_FAC.CPP  FRE_FAC.H  FRE_FAC.prj  FRE_URL.H  FRE_bus.H  FRE_bus.cpp  FRE_ros.H  FRE_ros.cpp  Fre_url.cpp  FreeE_Electron.cpp  FreeE_Electron.h  H2_LIQUI.CPP  H2_LIQUI.H  H2_PARAM.CFG  (+97 more)
cpp/URS/AUT/: ADI_EX.CPP  ADI_EX.H  AUT_FAC.H  CELL_FAC.CPP  CELL_FAC.H  CELL_KRU.CPP
cpp/URS/DEBYE/: DTVIEW.CFG  EMPI_COL.CPP  H2_DSH.CFG  H2_DSH.CPP  H2_DSH.PRJ  empi_col.PRJ
cpp/URS/ENO/: ENO_BOD.CPP  ENO_BOD.H  ENO_CLC.CPP  ENO_CLC.H  ENO_DAT.CPP  ENO_MY.CPP  ENO_REG.CPP  VEC_FRE.H  nat_BOD.CPP  nat_BOD.H  nat_CLC.CPP  nat_CLC.H  nat_MY.CPP
cpp/URS/test/: test_urs.cpp  test_urs.h  test_urs_resource.h  test_urs_resource.rc  urs_2phase.cpp  urs_2phase.h  urs_curve.cpp  urs_curve.h  urs_curve_calculator.cpp  urs_curve_calculator.h
cpp/URS/tools/: madi_construction.cpp
cpp/USE/GASD/: get_gas_from_removable.bat  set_gas_to_removable.bat
cpp/USE/MAIN/: 1.bat  get_main_from_removable.bat  set_main_to_removable.bat
cpp/USE/PRJ/: 1.bat  get_prj_from_removable.bat  set_prj_to_removable.bat
cpp/UTIL/: ANAL.CPP  ANAL.H  ANALEX.CPP  ANALEX.PRJ  ANALGLB.CPP  ANALGLB.H  ARDERIV.CFG  ARDERIV.CPP  ARDERIV.PRJ  ARGLB.CPP  ARGLB.PRJ  CVT.CFG  CVT.CPP  CVT.H  CVT.PRJ  DTVIEW.CFG  FABUILD.CFG  FABUILD.CPP  FABUILD.PRJ  FA_PP2.CFG  FUNC_RES.CPP  FUNC_RES.PRJ  GETSTR.CFG  GETSTR.CPP  GETSTR.PRJ  H3.CFG  OPAC.CPP  OPAC1.CPP  PRESSKEY.CPP  QUEST.PRJ  SET1GRPH.CFG  SET1GRPH.CPP  SET1GRPH.PRJ  TMSTD.CPP  TMSTD.H  USER_FUN.CPP  USER_FUN.H  analyse.h  checktest.cpp
cpp/UTIL/SPL/: DATXY_YX.CPP  SPA_X_X1.CFG  SPA_X_X1.CPP  SPA_X_X1.PRJ  SPLXY_XZ.CPP  SPLXY_XZ.prj  SPL_EVAL.CPP  SPL_X_X1.CPP  SPL_X_X1.PRJ  TAB_SPL.CPP  TAB_SPL.prj  datxy_yx.prj  spl_eval.prj
cpp/UTIL/WORK/: !.CFG  DSA_DAT.CFG  DSA_DAT.CPP  DSA_DAT.PRJ  GET_CONS.CPP  GET_CONS.PRJ  HAUK_MIN.CFG  HAUK_MIN.CPP  HAUK_MIN.PRJ  HEAT.CFG  HEATTRAN.CPP  HEATTRAN.PRJ  HE_TRANS.CFG  INT06.CFG  INTEGRAT.CPP  INTEGRAT.PRJ  TEKLDAT.CPP  TEKLDAT.PRJ  TEKLGRP.CPP  TEKLGRP.H
cpp/UTIL/qt/: qtdata.h  qtmenu.cpp  qtmenu.h  qtplot.h  qtshow.cpp
cpp/lib/Data/: DataArr.cpp  DataArr.h  DataTyp.cpp  DataTyp.h  DataVec.cpp  DataVec.h  NamedObject.cpp  NamedObject.h  SparceArray.cpp  SparceArray.h  VecRes.cpp  VecRes.h  data_forcelink.h
cpp/messb/: FAMAIN.CPP  FAMAIN.H  FAMESSB.CPP  FAMESSB.H  FAMESSB_TEST_func.cpp  FAMESSB_TEST_func.h  FAOBJ.CPP  FAREGIST.CPP  FAREGIST.H  FASTATE.CPP  FASTATE.H  FASTD.CPP  FATM.CPP  FATM.H  FAWOBJ.CPP  FAWOBJ.H  Faobj.h  Fastd.h  MESSB.CPP  MESSB.H  MESSB_AV.H  MESSB_AV_up.CPP  MESSB_REL_GEN.CPP  MESSB_REL_GEN.h  MESSB_in.CPP  MESSB_in.H  famessb_test.cpp  famessb_test.h  famessb_test_internal.cpp  famessb_test_internal.h  famessb_test_resource.h  famessb_test_resource.rc  faset_new.h  messb_angle_gen.cpp  messb_angle_gen.h  messb_defs.h  messb_forcelnk.h  messb_mean_field.cpp  messb_mean_field.h
cpp/perl/: AnalyzeData.pm  ClcGasd.pm  Split3DFile.pl  cmp.sh  exp_work.sh  gvk_extr.pl
vc/: gasd.kpf  kcclassif.kpf  matters.kpf  wiki.kpf
vc/polygon/: polygon.sln
(+922 files in other folders)
